# rust-qr-encoder

./: .drone.yml  .gitlab-ci.yml  Cargo.toml  Readme.md
packaging/gentoo/: rust-qr-encoder.ebuild
src/: main.rs  window.glade
